<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:layout_gravity="center">
<RelativeLayout 
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:layout_marginRight="10dp" 
    android:layout_marginLeft="10dp" 
    android:layout_marginBottom="60dp" 
    android:layout_marginTop="30dp" 
    android:background="@drawable/selector_popup_blue_noco"
    android:layout_centerInParent="true"
>
    <com.bbproject.noconoco.custom.view.MyTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:ellipsize="marquee"
		android:scrollHorizontally="true"
		android:marqueeRepeatLimit="marquee_forever"
	    android:textColor="@color/light_font"
        android:shadowColor="@color/blue_noco"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:textSize="24sp"
        android:text="@string/parental_control"
	/>
    <ScrollView 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@+id/title"
        android:fadeScrollbars="false">
    <RelativeLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" >

        <com.bbproject.noconoco.custom.view.MyTextView
	        android:id="@+id/error_msg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop="true"
	        android:singleLine="true"
	        android:ellipsize="marquee"
			android:scrollHorizontally="true"
			android:marqueeRepeatLimit="marquee_forever"
		    android:textColor="#FFFFFF"
	        android:shadowColor="#F50014"
	        android:shadowDx="5"
	        android:shadowDy="5"
	        android:shadowRadius="10"
	        android:textSize="16sp"
	        android:layout_marginTop="20dp"
	        android:text="@string/wrong_code"
	        android:visibility="gone"
		/>
                
        <com.bbproject.noconoco.custom.view.MyTextView
	        android:id="@+id/selectmsg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/error_msg"
	        android:singleLine="true"
	        android:ellipsize="marquee"
			android:scrollHorizontally="true"
			android:marqueeRepeatLimit="marquee_forever"
		    android:textColor="@color/light_font"
	        android:shadowColor="@color/blue_noco"
	        android:shadowDx="1"
	        android:shadowDy="1"
	        android:shadowRadius="5"
	        android:textSize="16sp"
	        android:layout_marginTop="20dp"
	        android:text="@string/video_filter"
		/>
     <LinearLayout
        android:id="@+id/csa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectmsg"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
    >
    <ImageView
        android:id="@+id/csadraw1"
		android:contentDescription="@string/none"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_csa10"
        android:layout_weight="0.25"
     />
    <ImageView
        android:id="@+id/csadraw2"
		android:contentDescription="@string/none"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_csa12"
        android:layout_weight="0.25"
     />
    <ImageView
        android:id="@+id/csadraw3"
		android:contentDescription="@string/none"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_csa16"
        android:layout_weight="0.25"
     />
    <ImageView
        android:id="@+id/csadraw4"
		android:contentDescription="@string/none"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/icon_csa18"
        android:layout_weight="0.25"
     />
    </LinearLayout>
        <EditText
            android:id="@+id/parental_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/csa"
            android:inputType="numberDecimal"
            android:hint="@string/code"
			android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/back_input_rounded"
        	android:singleLine="true"
        	android:padding="5dip"
        	android:ellipsize="end"
        	android:imeOptions="actionGo"
        	android:gravity="center_horizontal"
        	android:textColor="@android:color/black">

        </EditText>
        <Button
            android:id="@+id/validateButton"    
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
            android:layout_below="@+id/parental_code"
            android:background="@drawable/selector_rounded"
    		android:text="@string/enable"
            android:textColor="@color/blue_noco"
    		android:layout_marginTop="20dp"
        />
        <TextView
            android:id="@+id/notice"
            android:layout_marginTop="1dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/validateButton"
            android:singleLine="false"
            android:gravity="fill_horizontal"
        	android:text="@string/parental_notice"
        	android:textColor="@color/light_font"
	        android:shadowColor="@color/blue_noco"
	        android:shadowDx="1"
	        android:shadowDy="1"
	        android:shadowRadius="5"/>
                

    </RelativeLayout>
    </ScrollView>
    </RelativeLayout>

<ImageButton
	    android:id="@+id/close" 
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_close"
        android:layout_marginBottom="-55dp"
        android:layout_marginRight="-6dp"
        android:layout_above="@+id/container"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/close"
        />

</RelativeLayout>
