<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<include android:id="@+id/main" layout="@layout/view_main_top" />

	<RelativeLayout
                android:id="@+id/left_big_content"
		        android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="#000000">
<RelativeLayout
    android:id="@+id/left_head"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/back_view_gradient_blue_noco_rounded"
    android:layout_margin="2dp"
     >
    <com.bbproject.noconoco.custom.view.MyTextView
        android:id="@+id/grouphead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:paddingLeft="15dp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="marquee"
		android:scrollHorizontally="true"
		android:marqueeRepeatLimit="marquee_forever"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
     />
     <ImageView
		android:contentDescription="@string/none"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
        android:src="@drawable/back_logo_blanc_noco"
        android:layout_centerVertical="true"
         />
</RelativeLayout>
<ExpandableListView android:id="@+id/left_drawer"
	        android:layout_width="238dp"
	        android:layout_alignParentStart="true"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/left_head"
	        android:layout_height="match_parent"
	        android:choiceMode="singleChoice"
	        android:divider="@android:color/transparent"
	        android:dividerHeight="0dp"
	        android:background="#111"
	        android:groupIndicator="@null"
	        android:smoothScrollbar="true"
	        android:scrollingCache="false"
	    	android:animationCache="false"
	    	android:listSelector="@drawable/selector_expandable"/>
	        <ImageView
				   android:contentDescription="@string/none"
                   android:background="@drawable/icon_status_bar"
			       android:layout_alignParentRight="true"
			       android:layout_alignParentEnd="true"
                   android:layout_width="2dp"
                   android:layout_height="match_parent"/>
	    
	    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
<RelativeLayout
    android:id="@+id/chromecast"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:background="@drawable/img_noco_blanc_noeye"
	android:visibility="gone"
    android:layout_alignParentRight="true">
		        <android.support.v7.app.MediaRouteButton
	            	android:id="@+id/cast_button"
	            	android:background="@android:color/transparent"
			        android:layout_centerInParent="true"
			        android:layout_margin="20dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
					android:src="@drawable/quantum_ic_cast_white_36"
					android:theme="@style/Base.V7.Theme.AppCompat.Light"
                   />
	<ImageView
		android:id="@+id/castback"
		android:contentDescription="@string/none"
		android:background="@android:color/transparent"
		android:layout_centerInParent="true"
		android:layout_margin="20dp"
		android:layout_width="35dp"
		android:layout_height="35dp"
		android:src="@drawable/quantum_ic_cast_white_36"
		/>
<TextView
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/chromecast"
    android:layout_alignParentBottom="true"
    android:textColor="@android:color/white"
    android:shadowColor="@color/text_shadow"
    android:shadowDx="1"
    android:shadowDy="1"
    android:shadowRadius="5"/>
</RelativeLayout>

     <ImageView
        android:id="@+id/idparental"
		android:contentDescription="@string/none"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
        android:src="@drawable/icon_parental"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/disconnect"
         />
<RelativeLayout
    android:id="@+id/disconnect"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:background="@drawable/selector_disconnect"
    android:padding="2dp" >

    <ImageView
        android:id="@+id/imagedisconnect"
		android:contentDescription="@string/none"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_centerVertical="true"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:src="@drawable/icon_disconnect" />

    <TextView
        android:id="@+id/textdisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imagedisconnect"
        android:layout_toRightOf="@+id/imagedisconnect"
        android:padding="2dp"
        android:paddingRight="5dp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:text="@string/disconnect"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</RelativeLayout>

</RelativeLayout>